--- a/my-pokedex-api/package.json
+++ b/my-pokedex-api/package.json
@@ -12,9 +12,11 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "axios": "^1.3.5",
     "framer-motion": "^10.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "styled-components": "^5.3.9",
     "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.7"
